--- a/EducationManagementSystem/educationmanagementsystem.client/package.json
+++ b/EducationManagementSystem/educationmanagementsystem.client/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.1",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
+    "dotenv": "^16.4.7",
     "framer-motion": "^11.15.0",
     "next": "^15.1.2",
     "react": "^19.0.0",
